--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <div class="timer">
+        
+    </div>
     <div class="container">
         
     </div>
